Change select2 search box to be correct background colour in dark mode

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -372,7 +372,7 @@
 }
 
 .select2-container--default .select2-search--dropdown .select2-search__field {
-    background-color: $input-bg;
+    background-color: color(background, light);
     border: 1px solid $input-border;
 }
 
